--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -3,6 +3,8 @@ import { Icon } from 'astro-icon/components';
 import { SITE } from 'astrowind:config';
 import { getHomePermalink } from '~/utils/permalinks';
 
+import Logo from '~/components/Logo.astro';
+
 interface Link {
   text?: string;
   href?: string;
@@ -27,14 +29,18 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
 ---
 
 <footer class:list={[{ dark: theme === 'dark' }, 'relative border-t border-gray-200 dark:border-slate-800 not-prose']}>
-  <div class="dark:bg-dark absolute inset-0 pointer-events-none" aria-hidden="true"></div>
+  <div
+    class="dark:bg-dark absolute inset-0 pointer-events-none"
+    aria-hidden="true"
+  >
+  </div>
   <div
     class="relative max-w-7xl mx-auto px-4 sm:px-6 dark:text-slate-300 intersect-once intersect-quarter intercept-no-queue motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
   >
     <div class="grid grid-cols-12 gap-4 gap-y-8 sm:gap-8 py-8 md:py-12">
       <div class="col-span-12 lg:col-span-4">
         <div class="mb-2">
-          <a class="inline-block font-bold text-xl" href={getHomePermalink()}>{SITE?.name}</a>
+          <Logo />
         </div>
         <div class="text-sm text-muted flex gap-1">
           {
@@ -85,7 +91,12 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
                   aria-label={ariaLabel}
                   href={href}
                 >
-                  {icon && <Icon name={icon} class="w-5 h-5" />}
+                  {icon && (
+                    <Icon
+                      name={icon}
+                      class="w-5 h-5"
+                    />
+                  )}
                   <Fragment set:html={text} />
                 </a>
               </li>
