add font support

--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -1,5 +1,7 @@
 ---
-import '@fontsource-variable/inter';
+import '@fontsource-variable/roboto';
+import '@fontsource-variable/montserrat';
+import '@fontsource/kaisei-decol';
 
 // 'DM Sans'
 // Nunito
@@ -21,9 +23,9 @@ import '@fontsource-variable/inter';
 
 <style is:inline>
   :root {
-    --aw-font-sans: 'Inter Variable';
-    --aw-font-serif: 'Inter Variable';
-    --aw-font-heading: 'Inter Variable';
+    --aw-font-sans: 'Roboto Variable';
+    --aw-font-serif: 'Montserrat Variable';
+    --aw-font-heading: 'Montserrat Variable';
 
     --aw-color-primary: rgb(1 97 239);
     --aw-color-secondary: rgb(1 84 207);
@@ -38,26 +40,6 @@ import '@fontsource-variable/inter';
 
     ::selection {
       background-color: lavender;
-    }
-  }
-
-  .dark {
-    --aw-font-sans: 'Inter Variable';
-    --aw-font-serif: 'Inter Variable';
-    --aw-font-heading: 'Inter Variable';
-
-    --aw-color-primary: rgb(1 97 239);
-    --aw-color-secondary: rgb(1 84 207);
-    --aw-color-accent: rgb(109 40 217);
-
-    --aw-color-text-heading: rgb(247, 248, 248);
-    --aw-color-text-default: rgb(229 236 246);
-    --aw-color-text-muted: rgb(229 236 246 / 66%);
-    --aw-color-bg-page: rgb(3 6 32);
-
-    ::selection {
-      background-color: black;
-      color: snow;
     }
   }
 </style>
