--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -8,13 +8,13 @@ import LogoSrc from '~/assets/images/beigebykat-logo.svg';
   class="inline-block font-bold text-xl h-fit w-fit"
   href={getHomePermalink()}
 >
-  <div class=`w-32 h-20 lg:w-60`>
+  <div class=`h-fit w-[200px] lg:min-w-[260px] xl:min-w-[320px]`>
     <Image
       src={LogoSrc}
       alt="Graphic logo for impact web studio"
       class="!object-contain"
-      width={600}
-      height={240}
+      width={300}
+      height={100}
     />
   </div>
 </a>
