--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -2,6 +2,8 @@
 import '@fontsource-variable/roboto';
 import '@fontsource-variable/montserrat';
 import '@fontsource/kaisei-decol';
+// Supports weights 400-900
+import '@fontsource-variable/playfair-display';
 
 // 'DM Sans'
 // Nunito
@@ -25,10 +27,10 @@ import '@fontsource/kaisei-decol';
   :root {
     --aw-font-sans: 'Roboto Variable';
     --aw-font-serif: 'Montserrat Variable';
-    --aw-font-heading: 'Montserrat Variable';
+    --aw-font-heading: 'Playfair Display Variable';
 
-    --aw-color-primary: rgb(1 97 239);
-    --aw-color-secondary: rgb(1 84 207);
+    --aw-color-primary: #c78864;
+    --aw-color-secondary: rgb(0, 0, 0);
     --aw-color-accent: rgb(109 40 217);
 
     --aw-color-text-heading: rgb(0 0 0);
