--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -36,7 +36,7 @@ import '@fontsource-variable/playfair-display';
     --aw-color-text-heading: rgb(0 0 0);
     --aw-color-text-default: rgb(16 16 16);
     --aw-color-text-muted: rgb(16 16 16 / 66%);
-    --aw-color-bg-page: rgb(255 255 255);
+    --aw-color-bg-page: #fafafa;
 
     --aw-color-bg-page-dark: rgb(3 6 32);
 
