add about section
"

--- a/src/components/widgets/Hero2.astro
+++ b/src/components/widgets/Hero2.astro
@@ -32,11 +32,11 @@ const {
   <!-- ============================================ -->
 
   <WidgetWrapper>
-    <div class="flex gap-x-20 justify-center items-center">
+    <div class="flex gap-x-20 justify-evenly items-center">
       <div
         class="cs-content intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
       >
-        <span class="iws-tagline">{tagline}</span>
+        <span class="iws-tagline text-primary">{tagline}</span>
         <h1 class="cs-title">
           {title}
         </h1>
