--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,11 @@ const { language, textDirection } = I18N;
 ---
 
 <!doctype html>
-<html lang={language} dir={textDirection} class="2xl:text-[20px]">
+<html
+  lang={language}
+  dir={textDirection}
+  class="2xl:text-[20px]"
+>
   <head>
     <CommonMeta />
     <Favicons />
@@ -35,6 +39,10 @@ const { language, textDirection } = I18N;
     <Metadata {...metadata} />
     <SiteVerification />
     <Analytics />
+    <link
+      rel="stylesheet"
+      href="/src/assets/styles/global.css"
+    />
 
     <!-- Comment the line below to disable View Transitions -->
     <ClientRouter fallback="swap" />
