--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '~/layouts/PageLayout.astro';
 
 import Hero from '~/components/widgets/Hero.astro';
 import Hero2 from '~/components/widgets/Hero2.astro';
+import About from '~/components/widgets/About.astro';
 import Note from '~/components/widgets/Note.astro';
 import Features from '~/components/widgets/Features.astro';
 import Features2 from '~/components/widgets/Features2.astro';
@@ -47,9 +48,8 @@ const metadata = {
     </Fragment>
   </Hero2>
 
-  <!-- Note Widget ******************* -->
-
-  <Note />
+  <!-- About Widget -->
+  <About />
 
   <!-- Features Widget *************** -->
 
